--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "luogu": "index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/swift-zym/luogu-cli.git"
@@ -21,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/swift-zym/luogu-cli/issues"
   },
-  "homepage": "https://github.com/swift-zym/luogu-cli#readme"
+  "homepage": "https://github.com/swift-zym/luogu-cli#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
+    "commander": "^7.1.0",
+    "request": "^2.88.2",
+    "request-promise": "git+https://github.com/request/request-promise.git"
+  }
 }
