--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-    "luogu-domain":"https://www.luogu.com.cn/"
+    "luogu-domain":"https://www.luogu.com.cn/",
+    "anaylsis-domain":"http://13.76.171.159:3000/"
 }
