--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/swift-zym/luogu-cli#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
+    "child_process": "^1.0.2",
     "colors-cli": "^1.0.27",
     "commander": "^7.1.0",
     "inquirer": "^8.0.0",
